# nexus_v4

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.yml  go.mod  package.json  readme-bootstrap.md  readme-scaffold.md  requirements.txt  tsconfig.json
apps/: README.md
apps/admin-dashboard/: README.md
apps/cli/: README.md
apps/cli-web-dashboard/: README.md
apps/developer-portal/: README.md
apps/frontend-app/: README.md
apps/marketplace-app/: README.md
apps/sandbox-app/: README.md
docs/: README.md
docs/adr/: 0001-record-architecture-decisions.md  README.md
docs/api/: README.md  openapi.yaml
docs/architecture/: README.md
docs/dev-notes/: 0001__dev-note.md  0002__next-steps-post-initial-TODO.md  README.md
docs/guides/: README.md
docs/product/: README.md  roadmap.md
infra/: README.md
infra/ci-cd/: README.md
infra/docker/: README.md
infra/k8s/: README.md
infra/scripts/: README.md
infra/terraform/: README.md
libs/: README.md
libs/ai/: README.md
libs/auth/: README.md
libs/config/: README.md  loader.py
libs/db/: README.md  db_client.py
libs/logging/: README.md
libs/types/: README.md
libs/utils/: README.md
services/: README.md
services/ai-service/: README.md
services/analytics-service/: README.md
services/api-gateway/: README.md
services/auth-service/: README.md
services/data-service/: README.md
services/marketplace-service/: README.md
tests/: README.md
tools/: README.md
(+31 files in other folders)
