[package]
name = "nexus_sdk_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <thomas.carter@appliedinnovationcorp.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
